--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="header__inner">
                 <div class="header__logo">MoGo</div>
                 <nav class="nav">
-                    <a class="nav__link" href="#">About</a>
+                    <a class="nav__link active" href="#">About</a>
                     <a class="nav__link" href="#">Service</a>
                     <a class="nav__link" href="#">Blog</a>
                     <a class="nav__link" href="#">Work</a>
@@ -32,22 +32,26 @@
                 <h1 class="intro__title">Welcome to Mogo</h1>
                 <a class="btn" href="#">Learn more</a>
             </div>
-            <div class="intro__slider">
-                <div class="slider__item">
-                    <span class="slider__number">01</span>
-                    intro
-                </div>
-                <div class="slider__item">
-                    <span class="slider__number">02</span>
-                    work
-                </div>
-                <div class="slider__item">
-                    <span class="slider__number">03</span>
-                    about
-                </div>
-                <div class="slider__item">
-                    <span class="slider__number">04</span>
-                    contact
+        </div>
+        <div class="slider">
+            <div class="container">
+                <div class="slider__inner">
+                    <div class="slider__item active">
+                        <span class="slider__number">01</span>
+                        intro
+                    </div>
+                    <div class="slider__item">
+                        <span class="slider__number">02</span>
+                        work
+                    </div>
+                    <div class="slider__item">
+                        <span class="slider__number">03</span>
+                        about
+                    </div>
+                    <div class="slider__item">
+                        <span class="slider__number">04</span>
+                        contact
+                    </div>
                 </div>
             </div>
         </div>
