--- a/index.html
+++ b/index.html
@@ -2,60 +2,32 @@
 <html lang="en">
 
 <head>
+    <title>Lets try</title>
     <meta charset=utf-8>
     <!--connect css-->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style1.css">
     <!--connect fonts from google.fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2
-        ?family=Kaushan+Script&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    ?family=Plus+Jakarta+Sans:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="header__inner">
-                <div class="header__logo">MoGo</div>
-                <nav class="nav">
-                    <a class="nav__link active" href="#">About</a>
-                    <a class="nav__link" href="#">Service</a>
-                    <a class="nav__link" href="#">Blog</a>
-                    <a class="nav__link" href="#">Work</a>
-                    <a class="nav__link" href="#">Contacts</a>
-                </nav>
+    <section class="container">
+        <div class="main">
+            <div class="left">
+                <h2>nav</h2>
             </div>
-        </div>
-    </header>
-    <div class="intro">
-        <div class="container">
-            <div class="intro__inner">
-                <h2 class="intro__suptitle">Creative template</h2>
-                <h1 class="intro__title">Welcome to Mogo</h1>
-                <a class="btn" href="#">Learn more</a>
+            <div class="central">
+                <h1>Hello, Andi</h1>
             </div>
-        </div>
-        <div class="slider">
-            <div class="container">
-                <div class="slider__inner">
-                    <div class="slider__item active">
-                        <span class="slider__number">01</span>
-                        intro
-                    </div>
-                    <div class="slider__item">
-                        <span class="slider__number">02</span>
-                        work
-                    </div>
-                    <div class="slider__item">
-                        <span class="slider__number">03</span>
-                        about
-                    </div>
-                    <div class="slider__item">
-                        <span class="slider__number">04</span>
-                        contact
-                    </div>
-                </div>
+            <div class="right">
+                <h2>right</h2>
             </div>
-        </div>
-    </div>
+            
+        </div>         
+    </section>
 </body>
 
 </html>
