--- a/index1.html
+++ b/index1.html
@@ -35,12 +35,12 @@
                             <div class="circle"></div>
                         </div>
                     </div>
-                    <div class="picture"></div>
-                    <div class="picture"></div>
-                    <div class="picture"></div>
-                    <div class="picture"></div>
-                    <div class="picture"></div>
-                    <div class="picture"></div>
+                    <div class="picture"><img src="" alt="1"></div>
+                    <div class="picture"><img src="" alt="2"></div>
+                    <div class="picture"><img src="" alt="3"></div>
+                    <div class="picture"><img src="" alt="4"></div>
+                    <div class="picture"><img src="" alt="5"></div>
+                    <div class="picture"><img src="" alt="6"></div>
                 </nav>
             </div>
             <div class="central">
