--- a/index1.html
+++ b/index1.html
@@ -21,18 +21,20 @@
                     <img class="letter__inner" src="assets/images/letterN.png" alt="N">
                 </div>
                 <nav class="nav">
-                    <div class="logo">
-                        <div class="1">
-                            <div class="circle"></div>
-                        </div>
-                        <div class="2">
-                            <div class="squire"></div>
-                        </div>
-                        <div class="3">
-                            <div class="squire"></div>
-                        </div>
-                        <div class="4">
-                            <div class="circle"></div>
+                    <div class="picture active">
+                        <div class="logo">
+                            <div class="1">
+                                <div class="circle"></div>
+                            </div>
+                            <div class="2">
+                                <div class="squire"></div>
+                            </div>
+                            <div class="3">
+                                <div class="squire"></div>
+                            </div>
+                            <div class="4">
+                                <div class="circle"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="picture"><img src="" alt="1"></div>
