--- a/index1.html
+++ b/index1.html
@@ -20,6 +20,7 @@
                 <div class="letter">
                     <img class="letter__inner" src="assets/images/letterN.png" alt="N">
                 </div>
+            
                 <nav class="nav">
                     <div class="picture active">
                         <div class="logo">
@@ -37,16 +38,44 @@
                             </div>
                         </div>
                     </div>
-                    <div class="picture"><img src="" alt="1"></div>
-                    <div class="picture"><img src="" alt="2"></div>
-                    <div class="picture"><img src="" alt="3"></div>
-                    <div class="picture"><img src="" alt="4"></div>
-                    <div class="picture"><img src="" alt="5"></div>
-                    <div class="picture"><img src="" alt="6"></div>
+                    <div class="picture"><a href="#"><img class="img" src="assets/images/2132336.png" alt="1"></a></div>
+                    <div class="picture"><a href="#"><img class="img" src="assets/images/message.png" alt="2"></a></div>
+                    <div class="picture"><a href="#"><img class="img" src="assets/images/images4.png" alt="3"></a></div>
+                    <div class="picture"><a href="#"><img class="img" src="assets/images/camera.png" alt="4"></a></div>
+                    <div class="picture"><a href="#"><img class="img" src="assets/images/globe.png" alt="5"></a></div>
+                    <div class="picture"><a href="#"><img class="img" src="assets/images/brain.png" alt="6"></a></div>
+                    <div class="picture bottom"><a href="#"><img class="img" src="assets/images/brain.png" alt="6"></a></div>
                 </nav>
             </div>
             <div class="central">
-                <h1>Hello, Andi</h1>
+                <div class="top">
+                    <div class="top__inner">
+                        <div class="top__title">
+                            <div class="top__title__top">
+                                Hello, Andri
+                            </div>
+                            <div class="top__title__bottom">
+                                39.506M+ items in NFT market Place
+                            </div>
+                        </div>
+                        <div class="top__nav">
+                            <div class="top__input"></div>
+                            <div class="top__circle">
+                                <img class="top__circle__icon" src="assets/images/2132336.png" alt="icon">
+                            </div>
+                            <div class="top__circle">
+                                <img class="top__circle__icon" src="assets/images/camera.png" alt="icon">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="lot">
+                    <div class="lot__photo">
+                        <img src="assets/images/photo-1641391503184-a2131018701b.jpg" alt="lot photo">
+                    </div>
+                    <div></div>
+                </div>
+                <div></div>
             </div>
             <div class="right">
                 <h2>right</h2>
