7-central-in-progress

--- a/index1.html
+++ b/index1.html
@@ -71,9 +71,23 @@
                 </div>
                 <div class="lot">
                     <div class="lot__photo">
-                        <img src="assets/images/photo-1641391503184-a2131018701b.jpg" alt="lot photo">
+                        <img class="lot__photo__img" src="assets/images/photo-1641391503184-a2131018701b.jpg" alt="lot photo"/>
+                        <div class="backCount">
+                            <div class="backCount__inner">5h : 40m : 30s</div>
+                        </div>
                     </div>
-                    <div></div>
+                    <div class="lot__data">
+                        <div class="lot__name">Purple Mannequin 3d Art Design</div>
+                        <div class="lot__currentBid">
+                            <div class="lot__currentBid__title">Current Bid</div>
+                            <div class="lot__currentBid__price">0.986 ETH</div>
+                            <div></div>
+                        </div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                 </div>
                 <div></div>
             </div>
