--- a/index1.html
+++ b/index1.html
@@ -20,7 +20,7 @@
                 <div class="letter">
                     <img class="letter__inner" src="assets/images/letterN.png" alt="N">
                 </div>
-            
+
                 <nav class="nav">
                     <div class="picture active">
                         <div class="logo">
@@ -44,7 +44,8 @@
                     <div class="picture"><a href="#"><img class="img" src="assets/images/camera.png" alt="4"></a></div>
                     <div class="picture"><a href="#"><img class="img" src="assets/images/globe.png" alt="5"></a></div>
                     <div class="picture"><a href="#"><img class="img" src="assets/images/brain.png" alt="6"></a></div>
-                    <div class="picture bottom"><a href="#"><img class="img" src="assets/images/brain.png" alt="6"></a></div>
+                    <div class="picture bottom"><a href="#"><img class="img" src="assets/images/brain.png" alt="6"></a>
+                    </div>
                 </nav>
             </div>
             <div class="central">
@@ -71,7 +72,8 @@
                 </div>
                 <div class="lot">
                     <div class="lot__photo">
-                        <img class="lot__photo__img" src="assets/images/photo-1641391503184-a2131018701b.jpg" alt="lot photo"/>
+                        <img class="lot__photo__img" src="assets/images/photo-1641391503184-a2131018701b.jpg"
+                            alt="lot photo" />
                         <div class="backCount">
                             <div class="backCount__inner">5h : 40m : 30s</div>
                         </div>
@@ -81,22 +83,162 @@
                         <div class="lot__currentBid">
                             <div class="lot__currentBid__title">Current Bid</div>
                             <div class="lot__currentBid__price">0.986 ETH</div>
-                            <div></div>
+                            <button class="lot__currentBid__btn">
+                                Place a Bid
+                            </button>
                         </div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <div class="lot__date">
+                            <div class="lot__date__dote">
+                                <div class="lot__date__dote__inner"></div>
+                            </div>
+                            <div class="lot__date__text">Date</div>
+                            <div class="lot__date__date">02 - 03 - 2022</div>
+                        </div>
+                        <div class="lot__metadate">
+                            <div class="lot__date__dote">
+                                <div class="lot__date__dote__inner two"></div>
+                            </div>
+                            <div class="lot__date__text">Metadate</div>
+                            <div class="lot__date__date">Frozen</div>
+                        </div>
+                        <div class="lot__blochchain">
+                            <div class="lot__date__dote">
+                                <div class="lot__date__dote__inner three"></div>
+                            </div>
+                            <div class="lot__date__text">Blochchain</div>
+                            <div class="lot__date__date">Ethereum</div>
+                        </div>
+                        <div class="lot__bottom">
+                            <div class="lot__bottom__creator">
+                                <div class="lot__bottom__creator__1">
+                                    <img class="creator__photo" src="assets/images/photo-1641391503184-a2131018701b.jpg"
+                                        alt="creator__photo">
+                                </div>
+                                <div class="lot__bottom__creator__2">
+                                    <div class="fullName">Nadim Amanda</div>
+                                    <div class="creator">Creator</div>
+                                </div>
+                            </div>
+                            <div class="lot__bottom__instancePrice">
+                                <div class="lot__bottom__instancePrice__1">
+                                    <img class="eth__img" src="assets/images/star.png" alt="eth">
+                                </div>
+                                <div class="lot__bottom__instancePrice__2">
+                                    <div class="eth__price">2.5 ETH</div>
+                                    <div class="eth__instancePrice">Instant Price</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div></div>
+                <div class="separation__bar">
+                    <div class="separation__bar__title">Top Collection</div>
+                    <div class="separation__bar__viewAll">View All</div>
+                </div>
+                <div class="central__bottom">
+                    <div class="lot2">
+                        <div class="lot2__top">
+                            <div class="lot2__top__photo">
+                                <img class="lot2__top__img" src="assets/images/photo-1641391503184-a2131018701b.jpg"
+                                    alt="photo">
+                            </div>
+                            <div class="lot2__top__data">
+                                <div class="lot2__top__name">Wi Seung Hyun</div>
+                                <div class="lot2__top__owner">Owner</div>
+                            </div>
+                            <div class="lot2__top__like">
+                                <img class="lot2__top__heart" src="assets/images/heart.png" alt="heart">
+                            </div>
+                        </div>
+                        <div class="lot2__photo">
+                            <img class="lot2__photo__img" src="assets/images/lot2.jpg" alt="photo">
+                            <button class="lot2__photo__button">
+                                Place a Bid
+                            </button>
+                        </div>
+                        <div class="lot2__name">Green Tree Human Art</div>
+                        <div class="lot2__name__vector"></div>
+                        <div class="lot2__bottom">
+                            <div class="lot2__bottom__left">
+                                <div class="lot2__bottom__endingIn">Ending in</div>
+                                <div class="lot2__bottom__timer">5h 12m 6s</div>
+                            </div>
+                            <div class="lot2__bottom__right">
+                                <div class="lot2__bottom__highestBid">Highest bid</div>
+                                <div class="lot2__bottom__price">5.54 ETH</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="lot2">
+                        <div class="lot2__top">
+                            <div class="lot2__top__photo">
+                                <img class="lot2__top__img" src="assets/images/lot3.jpg" alt="photo">
+                            </div>
+                            <div class="lot2__top__data">
+                                <div class="lot2__top__name">Kim Tak</div>
+                                <div class="lot2__top__owner">Owner</div>
+                            </div>
+                            <div class="lot2__top__like">
+                                <img class="lot2__top__heart" src="assets/images/heart2.png" alt="heart">
+                            </div>
+                        </div>
+                        <div class="lot2__photo">
+                            <img class="lot2__photo__img" src="assets/images/lot3.jpg" alt="photo">
+                        </div>
+                        <div class="lot2__name">Yellow Tree Human Art</div>
+                        <div class="lot2__name__vector"></div>
+                        <div class="lot2__bottom">
+                            <div class="lot2__bottom__left">
+                                <div class="lot2__bottom__endingIn">Ending in</div>
+                                <div class="lot2__bottom__timer">6h 12m 6s</div>
+                            </div>
+                            <div class="lot2__bottom__right">
+                                <div class="lot2__bottom__highestBid">Highest bid</div>
+                                <div class="lot2__bottom__price">3.54 ETH</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="lot2">
+                        <div class="lot2__top">
+                            <div class="lot2__top__photo">
+                                <img class="lot2__top__img" src="assets/images/lot4.jpg" alt="photo">
+                            </div>
+                            <div class="lot2__top__data">
+                                <div class="lot2__top__name">Kim Tae-Mu</div>
+                                <div class="lot2__top__owner">Owner</div>
+                            </div>
+                            <div class="lot2__top__like">
+                                <img class="lot2__top__heart" src="assets/images/heart2.png" alt="heart">
+                            </div>
+                        </div>
+                        <div class="lot2__photo">
+                            <img class="lot2__photo__img" src="assets/images/lot4.jpg" alt="photo">
+                        </div>
+                        <div class="lot2__name">Blue Tree Human Art</div>
+                        <div class="lot2__name__vector"></div>
+                        <div class="lot2__bottom">
+                            <div class="lot2__bottom__left">
+                                <div class="lot2__bottom__endingIn">Ending in</div>
+                                <div class="lot2__bottom__timer">7h 12m 6s</div>
+                            </div>
+                            <div class="lot2__bottom__right">
+                                <div class="lot2__bottom__highestBid">Highest bid</div>
+                                <div class="lot2__bottom__price">4.54 ETH</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="right">
-                <h2>right</h2>
+                <div class="right__top">
+                    <img class="right__top" src="assets/images/image1.jpg" alt="Rectangle">
+                </div>
+                <div class="right__collector">
+                    <img class="right__collector__img" src="assets/images/bin.jpeg" alt="photo">
+                </div>
             </div>
-
         </div>
     </section>
 </body>
-    
-    </html>
+
+</html>
