--- a/index1.html
+++ b/index1.html
@@ -231,10 +231,25 @@
             </div>
             <div class="right">
                 <div class="right__top">
-                    <img class="right__top" src="assets/images/image1.jpg" alt="Rectangle">
+                    <div class="right__top__inner">
+                        <img class="right__top__inner" src="assets/images/image1.jpg" alt="Rectangle">
+                    </div>
+                    <div class="right__collector">
+                        <img class="right__collector__img" src="assets/images/bin.jpeg" alt="photo">
+                    </div>
+                    <div class="right__collector__data">
+                        <div class="right__collector__name">Andri Young</div>
+                        <div class="right__collector__collector">Collector</div>
+                    </div>
                 </div>
-                <div class="right__collector">
-                    <img class="right__collector__img" src="assets/images/bin.jpeg" alt="photo">
+                <div class="right__title">Biography</div>
+                <div class="right__biography">
+                    The Collector was effectively the most important administrative figure in an Indian district.
+                </div>
+                <div class="right__btns">
+                    <button class="right__btn">Follow +</button>
+                    <div class="right__btns__circle"></div>
+                    <div class="right__btns__circle"></div>
                 </div>
             </div>
         </div>
