--- a/index1.html
+++ b/index1.html
@@ -43,8 +43,8 @@
                     <div class="picture"><a href="#"><img class="img" src="assets/images/images4.png" alt="3"></a></div>
                     <div class="picture"><a href="#"><img class="img" src="assets/images/camera.png" alt="4"></a></div>
                     <div class="picture"><a href="#"><img class="img" src="assets/images/globe.png" alt="5"></a></div>
-                    <div class="picture"><a href="#"><img class="img" src="assets/images/brain.png" alt="6"></a></div>
-                    <div class="picture bottom"><a href="#"><img class="img" src="assets/images/brain.png" alt="6"></a>
+                    <div class="picture"><a href="#"><img class="img" src="assets/images/folder.png" alt="6"></a></div>
+                    <div class="picture bottom"><a href="#"><img class="img" src="assets/images/folder2.png" alt="6"></a>
                     </div>
                 </nav>
             </div>
@@ -248,8 +248,87 @@
                 </div>
                 <div class="right__btns">
                     <button class="right__btn">Follow +</button>
-                    <div class="right__btns__circle"></div>
-                    <div class="right__btns__circle"></div>
+                    <div class="right__btns__circle">
+                        <img class="right__btns__circle__inner" src="assets/images/folder2.png" alt="folder">
+                    </div>
+                    <div class="right__btns__circle">
+                        <img class="right__btns__circle__inner" src="assets/images/3dotes.png" alt="dotes">
+                    </div>
+                </div>
+                <div class="right__line"></div>
+                <div class="right__bottom">
+                    <div class="right__bottom__followers active">
+                        <div class="right__bottom__number">1</div>
+                        <div class="right__bottom__photo">
+                            <img class="right__bottom__photo" src="assets/images/cat2.jpg" alt="photo">
+                        </div>
+                        <div class="right__bottom__data">
+                            <div class="right__bottom__data__name">Stella Amanda</div>
+                            <div class="right__bottom__data__account">
+                                <div class="right__bottom__data__eth" >
+                                    <img class="right__bottom__data__eth__img" src="assets/images/star.png" alt="eth">
+                                </div>
+                                <div class="right__bottom__data__number">6.049.85</div>
+                            </div>
+                        </div>
+                        <div class="right__bottom__plus">
+                            <img class="right__bottom__plus__img" src="assets/images/plus.png" alt="plus">
+                        </div>
+                    </div>
+                    <div class="right__bottom__followers">
+                        <div class="right__bottom__number">2</div>
+                        <div class="right__bottom__photo">
+                            <img class="right__bottom__photo" src="assets/images/tiger.jpg" alt="photo">
+                        </div>
+                        <div class="right__bottom__data">
+                            <div class="right__bottom__data__name">Angelina Young</div>
+                            <div class="right__bottom__data__account">
+                                <div class="right__bottom__data__eth" >
+                                    <img class="right__bottom__data__eth__img" src="assets/images/star.png" alt="eth">
+                                </div>
+                                <div class="right__bottom__data__number">6.049.85</div>
+                            </div>
+                        </div>
+                        <div class="right__bottom__plus">
+                            <img class="right__bottom__plus__img" src="assets/images/plus.png" alt="plus">
+                        </div>
+                    </div>
+                    <div class="right__bottom__followers">
+                        <div class="right__bottom__number">3</div>
+                        <div class="right__bottom__photo">
+                            <img class="right__bottom__photo" src="assets/images/cat.jpg" alt="photo">
+                        </div>
+                        <div class="right__bottom__data">
+                            <div class="right__bottom__data__name">Michael Ching</div>
+                            <div class="right__bottom__data__account">
+                                <div class="right__bottom__data__eth" >
+                                    <img class="right__bottom__data__eth__img" src="assets/images/star.png" alt="eth">
+                                </div>
+                                <div class="right__bottom__data__number">6.049.85</div>
+                            </div>
+                        </div>
+                        <div class="right__bottom__plus">
+                            <img class="right__bottom__plus__img" src="assets/images/plus.png" alt="plus">
+                        </div>
+                    </div>
+                    <div class="right__bottom__followers">
+                        <div class="right__bottom__number">4</div>
+                        <div class="right__bottom__photo">
+                            <img class="right__bottom__photo" src="assets/images/bin.jpeg" alt="photo">
+                        </div>
+                        <div class="right__bottom__data">
+                            <div class="right__bottom__data__name">Daniel Ching</div>
+                            <div class="right__bottom__data__account">
+                                <div class="right__bottom__data__eth" >
+                                    <img class="right__bottom__data__eth__img" src="assets/images/star.png" alt="eth">
+                                </div>
+                                <div class="right__bottom__data__number">6.049.85</div>
+                            </div>
+                        </div>
+                        <div class="right__bottom__plus">
+                            <img class="right__bottom__plus__img" src="assets/images/plus.png" alt="plus">
+                        </div>
+                    </div>  
                 </div>
             </div>
         </div>
